--- a/deploymentservice.yml
+++ b/deploymentservice.yml
@@ -5,22 +5,21 @@ metadata:
   labels:
     app: nodeapp
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: nodeapp
   template:
     metadata:
       labels:
-        app: nodeapp 
+        app: nodeapp
     spec:
       containers:
       - name: nodeserver
-        image: thetips4you/nodeapp:latest
+        image: 8469551344/nodeapp:latest
         ports:
         - containerPort: 3000
-        
-        
+
 ---
 
 apiVersion: v1
@@ -29,10 +28,30 @@ metadata:
   name: nodeapp-service
 spec:
   selector:
-    app: nodeapp 
+    app: nodeapp
   type: LoadBalancer
   ports:
   - protocol: TCP
     port: 5000
     targetPort: 3000
     nodePort: 31110
+
+---
+
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: nodeapp-ingress
+spec:
+  rules:
+  - host: example.com  # Replace with your domain or hostname
+    http:
+      paths:
+      - pathType: Prefix
+        path: /app
+        backend:
+          service:
+            name: nodeapp-service
+            port:
+              number: 5000
+
